# small-size-league-mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.json  chroma.sqlite3  config.py  db_management.py  docker-compose.yaml  env.example  full_website.txt  main.py  mcp.py  mcp_client_tester.py  mcp_server.py  models.py  processed_urls.txt  providers.py  pyproject.toml  settings.py  text_handler.py  vector_store_factory.ipynb  website_sources.py
.github/workflows/: docker-image.yml
data/: full_repository.txt  full_rules.txt  full_website.txt  processed_urls.txt
modules/: db_management.py  text_handler.py
tools/: __init__.py  ssl_search.py  tdp_search.py
