[project]
name = "small-size-league-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastmcp>=2.3",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "lxml>=5.3.1",
    "mcp[cli]>=1.6.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
    "tdqm>=0.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
