[project]
name = "small-size-league-mcp"
version = "0.1.0"
description = "A MCP server for the Small Size League category, providing tools to retrieve knowledge from the website, rules and TDPs."
readme = "README.md"
authors = [
    { name = "Bruno Silva de Castro", email = "bruno.c0310@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
mcp-server = [
    "fastmcp>=2.3.4",
    "langchain-chroma>=0.2.3",
    "langchain-ollama>=0.3.0",
    "mcp[cli]>=1.9.0",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
]
nlp = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
]

[tool.uv]
default-groups = ["mcp-server"]