[project]
name = "small-size-league-mcp"
version = "0.1.0"
description = "A MCP server for the Small Size League category, providing tools to retrieve knowledge from the website, rules and TDPs."
readme = "README.md"
authors = [
    { name = "Bruno Silva de Castro", email = "bruno.c0310@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastmcp>=2.10.5",
    "httpx>=0.27.0",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "requests>=2.32.3",
    "pydantic>=2.11.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
nlp = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
]